@@ -177,6 +177,10 @@ AUTHORITY_WHITELIST
 
 ACCESS_LEVEL_ADMIN 2
 
+# To use the /teach or /rtfm command you need at least
+
+ACCESS_LEVEL_RTFM 2
+
 # To use the /op, /dop, /promote and /demote ad-hoc access level modifying
 # commands, you need ot have at least
 
